--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
