--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "formik": "^2.2.9",
     "js-md5": "^0.7.3",
     "md5": "^2.3.0",
     "prettier": "^2.3.1",
     "react": "17.0.1",
     "react-devtools": "^4.13.5",
+    "react-hook-form": "^7.12.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
