--- a/package.json
+++ b/package.json
@@ -33,17 +33,20 @@
     "react-devtools": "^4.13.5",
     "react-hook-form": "^7.12.1",
     "react-native": "0.64.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.1.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
