--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/core": "^5.15.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -45,6 +46,8 @@
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.1.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
